--- a/indexedDB.html
+++ b/indexedDB.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <link rel="stylesheet" href="./css/tailwind.css" />
+    <link rel="shortcut icon" href="./src/1.jpg" type="image/x-icon">
     <title>Indexed DB</title>
   </head>
   <body class="dark:bg-teal-900">
