Corrijo el bug de la imagen miniatra y limpio un poco el codigo

--- a/indexedDB.html
+++ b/indexedDB.html
@@ -130,7 +130,7 @@
               <!-- <img class="ring-2 ring-gray-300 dark:ring-gray-500" src="./src/eZJyctBQ.jpg" alt="photo-default"> -->
               <img class="p-1 w-32 h-32 rounded-full ring-2 ring-gray-300
                 dark:ring-gray-500 object-cover img-preview"
-                src="./src/1.jpg" alt="photo-perfil">
+                src='https://pm1.narvii.com/6471/30c93dd5e859d344d0a743dcf2a94aa5d8618b31_hq.jpg' alt="photo-perfil">
 
             </div>
 
