--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- FAVICON -->
 		<link rel="shortcut icon" href="./src/1.jpg" type="image/x-icon">
 		<title>Apis</title>
 		<!-- CUSTOM CSS -->
 		<link rel="stylesheet" href="./css/styles.css" />
 		<!-- iCONS -->
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-			/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
 	</head>
 
 	<body>
@@ -251,6 +249,7 @@
 		<script src="./js/fontawesome.js"></script>
 		<!-- AXIOS -->
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<!-- JS CUSTOM -->
 		<script type="module" src="./js/main.js"></script>
 	</body>
 </html>
