Añado Notifications a IndexedDB y corrijo bug de la imagen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<!-- CUSTOM CSS -->
 		<link rel="stylesheet" href="./css/styles.css" />
 		<!-- iCONS -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+		<link rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
 	</head>
 
 	<body>
@@ -58,7 +59,10 @@
 							<a href="#FileReader" class="nav-link nav-link6">FilerReader</a>
 						</li>
 						<li class="nav__item">
-							<a href="#indexedDB" class="nav-link nav-link6">indexedDB</a>
+							<a href="#indexedDB" class="nav-link nav-link7">indexedDB</a>
+						</li>
+						<li class="nav__item">
+							<a href="#matchMedia" class="nav-link nav-link8">matchMedia</a>
 						</li>
 					</ul>
 				</nav>
@@ -242,8 +246,41 @@
 						</a>
 					</div>
 				</section>
+
+				<section id="matchMedia" class="section">
+					<div class="matchMedia-section">
+						<h1 class="title head__title">matchMedia</h1> <br><br>
+						<p>
+							Aparte de utilizar matchMedia para aplicar estilos de acuerdo con el
+							tamaño de la pantalla o otros atributos de visualización, también se
+							puede utilizar para cargar o descargar recursos de acuerdo con la
+							disponibilidad de ciertas características del navegador o dispositivo.
+							<br><br>
+
+							Por ejemplo, podrías utilizar matchMedia para cargar un archivo de
+							estilos específico para pantallas de alta densidad de píxeles (como
+							pantallas
+							Retina) o para cargar una versión diferente de una imagen en función del
+							soporte para determinados formatos de imagen. <br> <br>
+
+							También se puede utilizar matchMedia para habilitar o deshabilitar
+							determinadas funcionalidades de la aplicación en función de la
+							disponibilidad de ciertas características. Por ejemplo, podrías utilizar
+							matchMedia para deshabilitar el soporte para pantalla táctil en una
+							aplicación en función de la presencia o ausencia de una pantalla táctil
+							en el dispositivo. <br> <br>
+
+							En resumen, matchMedia es una herramienta muy útil para adaptar la
+							aplicación o sitio web a diferentes entornos de visualización y habilitar
+							o deshabilitar funcionalidades en función de la disponibilidad de ciertas
+							características <br> <br>
+						</p>
+					</div>
+				</section>
+				<img class="😍" data-src="./src/1.jpg" alt="Imagen pro">
+
 			</main>
-			
+
 		</div>
 		<!-- FONT AWESOME -->
 		<script src="./js/fontawesome.js"></script>
