--- a/indexedDB.html
+++ b/indexedDB.html
@@ -187,14 +187,14 @@
 
       <!-- ADD USER -->
       <section class="flex justify-center items-center h-20 gap-5 flex-wrap">
-        <a id="add-user-modal" type="button" class="text-white bg-gradient-to-r
+        <button id="add-user-modal" type="button" class="text-white bg-gradient-to-r
           from-teal-900 via-teal-800 to-teal-700 hover:bg-gradient-to-br
           dark:bg-gradient-to-r dark:from-slate-900 dark:via-slate-800
           dark:to-slate-700
           dark:hover:bg-gradient-to-br
           focus:ring-4 focus:outline-none focus:ring-teal-300
           dark:focus:ring-teal-800 font-medium rounded-lg text-sm px-5
-          py-2.5 text-center mr-2 mb-2 cursor-pointer">Agregar usuario</a>
+          py-2.5 text-center mr-2 mb-2 cursor-pointer">Agregar usuario<button/>
 
         <a id="get-users" type="button" class="text-white bg-gradient-to-r
           from-slate-900 via-slate-800 to-slate-700 hover:bg-gradient-to-br
