--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
 			</div>
 			<div class="container">
 				<h1>Apis de js</h1>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					Ducimus provident neque corporis sint, reiciendis, eum odio
-					magni pariatur voluptate perferendis accusantium tempore
-					voluptatem explicabo dolorum consequatur qui deserunt
-					veritatis aperiam?
+				<p class="hero" >
+					Estas son algunas Apis de JS, realice algunos ejemplos para poder entender su funcionamiento en algunos ejemplos combine varias de ellas e incluso use algun que otro framework vale aclarar que esto lo hice mientras estudiaba, y no es un proyecto como tal, sé que hay ciertos bugs que podrían ser molestos espero comprenda y pueda ser de su agrado su paso por aquí 🤙🏽.
 				</p>
 			</div>
 		</header>
@@ -64,6 +60,12 @@
 						<li class="nav__item">
 							<a href="#matchMedia" class="nav-link nav-link8">matchMedia</a>
 						</li>
+						<li class="nav__item">
+							<a href="#sw" class="nav-link nav-link9">Service Worker</a>
+						</li>
+						<li class="nav__item">
+							<a href="#cache" class="nav-link nav-link10">Memoria Cache</a>
+						</li>
 					</ul>
 				</nav>
 			</aside>
@@ -97,10 +99,10 @@
 									type="text"
 									placeholder="Añade tu tarea"
 									/><span class="inputFocus"></span>
-								<span
+								<button
 									id="btn-add-task"
 									class="material-symbols-outlined icon">add
-								</span>
+								</button>
 							</form>
 						</div>
 
@@ -274,11 +276,31 @@
 							aplicación o sitio web a diferentes entornos de visualización y habilitar
 							o deshabilitar funcionalidades en función de la disponibilidad de ciertas
 							características <br> <br>
+							Para ver uno de sus usos el siguiente personaje👇🏽 cambia por otro personaje en pantallas con un menor a 600px
 						</p>
-						<img class="😍" data-src="./src/1.jpg" alt="Imagen pro">
+						<img class="😍" data-src="./src/2.jpg" alt="Imagen pro">
 					</div>
 				</section>
-
+				<section id="sw" class="section">
+					<div class="sw-section">
+						<h1 class="title">Service Worker</h1>
+						<p>Un Web Worker es una característica de JavaScript que permite ejecutar código en un hilo separado del hilo principal del
+						navegador. Esto puede ser útil para realizar tareas intensivas en el procesamiento de datos o para realizar tareas en
+						segundo plano que no necesitan interactuar con la interfaz de usuario.
+						Para utilizar un Web Worker en una aplicación web, se debe crear un archivo de JavaScript que contenga el código que se
+						desea ejecutar en el hilo separado. Luego, se puede crear una instancia del Web Worker en el código principal de la
+						aplicación y enviarle mensajes para iniciar su ejecución. El Web Worker ejecutará el código en un hilo separado y puede
+						enviar mensajes de vuelta al hilo principal para proporcionar resultados o notificar el progreso.</p> <br>
+						<a target="_blank" class="sw-a" href="https://luisjimenez19.github.io/chat-serviceWorker/">
+							<p>Uso el serviceWorker para conectar dos pestañas de un mismo navegador y crear un chat en tiempo real click <b style="color: black; text-decoration: underline;" >here</b></p>
+						</a>
+					</div>
+				</section>
+				<section id="cache" class="section">
+					<div class="cache-section">
+						<p>La memoria cache sirve para almacenar scripts, imagenes, estilos, información, etc y así ahorrar tiempo y recursos, en este caso solo hago una petición con el metodo add del cache y guardo su valor en el cache asi cuando recargue carga la imagen del cache y no hace la petición. </p>
+					</div>
+				</section>
 
 
 			</main>
