--- a/indexedDB.html
+++ b/indexedDB.html
@@ -157,11 +157,11 @@
               </span>
             </button>
             <!-- Update -->
-            <a class="text-white bg-gradient-to-r
+            <button class="text-white bg-gradient-to-r
               from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br
               focus:ring-4 focus:outline-none focus:ring-teal-300
               dark:focus:ring-teal-800 font-medium rounded-lg text-sm px-5
-              py-2.5 text-center mr-2 mb-2 hidden cursor-pointer" id="put-user">Actualizar</a>
+              py-2.5 text-center mr-2 mb-2 hidden cursor-pointer" id="put-user">Actualizar</button>
             <!-- DELETE -->
             <a class="relative inline-flex items-center justify-center
               p-0.5
